--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "date-fns": "^4.1.0",
     "next": "^14.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0"
